package com.command;

/**
 * @author cuiliu
 */
public interface Command {
    public void execute();
    public void undo();
}
