package com.command;

import lombok.extern.slf4j.Slf4j;

/**
 * @author cuiliu
 */
@Slf4j
public class GarageDoor {
    public void open(){
        log.info("Garage Door is Open");
    }

    public void close(){
        log.info("Garage Door is Close");
    }
}
